# kiwis_pie

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.rst  devbox.json  pyproject.toml  setup.cfg  setup.py
.github/workflows/: CI.yml  build-package.yml  release.yml
conda.recipe/: meta.yaml
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
kiwis_pie/: Thumbs.db  __init__.py  _version.py  kiwis.py
kiwis_pie/testing/: test_kiwis_pie.py
kiwis_pie/testing/test_data/: LICENSE  bom_parameter_list.csv  bom_parameter_list.request
